<resources>
    <string name="app_name">ModeSelektor</string>
    <string name="rdb1">Ultra Battery</string>
    <string name="rdb2">Battery</string>
    <string name="rdb3">Balanced</string>
    <string name="rdb4">Performance</string>
    <string name="rdb5">Ultra Performance</string>
    <string name="sw">Apply on Boot</string>
    <string name="auto_selektor">Auto Selektor</string>
    <string name="auto_enable_ultra_battery">Auto enable Ultra Battery</string>
    <string name="select_battery_percentage">Select battery percentage</string>
    <string name="reset_scripts">Restore scripts</string>
    <string name="license">License</string>
    <string name="sources">Sources</string>
    <string name="updates">Updates</string>
    <string name="selektor">Selektor</string>
    <string name="refresh">Refresh</string>
    <string name="about">About</string>
    <string name="last_log">Last log</string>
    <string name="extra_selektor">extra selektor</string>
    <string name="disable_google_updates">Disable google updates</string>
    <string name="extra_selektora">EXTRA SELEKTOR</string>
    <string name="build_prop_tweaks">Build.prop Tweaks</string>
    <string name="google_play_tweaks">Google Play Tweaks</string>
</resources>